2007-11-22	Frank Richter	<frank.richter@gmail.com>

* Everything: 
  Initial checkin. Rendering, mouse events, keyboard events.