@@ -1,0 +1,4 @@
+project(OffscreenGecko)
+
+add_subdirectory (include)
+add_subdirectory (src out)
